--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-modal": "^3.12.0",
     "@types/styled-components": "^5.1.9",
     "axios": "^0.21.1",
+    "chokidar": "^3.5.2",
     "miragejs": "^0.1.41",
     "polished": "^4.1.3",
     "react": "^17.0.2",
